--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,156 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+*{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: lightcyan;
+  font-family: 'Sedan', serif;
+}
+
+.content{
+  height: auto;
+}
+
+.register-page, .login-page{
+  margin: 0 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-family: "Sedan", serif;
+}
+
+.formR{
+  border: 2px solid black;
+  border-radius: 0 0 10% 0;
+  width: 100%;
+  padding: 7.5%;
+  /* margin: 10% auto; */
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: white;
+  text-align: center;
+  /* max-width: 800px; */
+}
+
+.designR{
+  background-color: #3CB29C;
+  display: flex;
+  border-radius: 10% 0 0 0;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
+  height: 80vh;
+  padding: 10%;
+}
+/* 3CB29C */
+
+.designR h1, .designL h1{
+  color: white;
+  font-size: 3rem;
+}
+
+.designR h3, .designL h3{
+  color: white;
+  margin: 10% 0;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.formL{
+  border: 2px solid black;
+  border-radius: 10% 0 0 0;
+  width: 100%;
+  padding: 7.5%;
+  /* margin: 10% auto; */
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: white;
+  text-align: center;
+  /* max-width: 800px; */
+}
+
+.designL{
+  background-color: #3CB29C;
+  display: flex;
+  border-radius: 0 0 10% 0;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
+  height: 80vh;
+  padding: 10%;
+}
+
+.navButtons{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* Transaction Page */
+
+.filters{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px; 
+  /* margin: 1% 0; */
+  box-shadow: 0px 0px 3px gray;
+}
+
+/* Ant-Design Icons */
+
+.switchIcons{
+  /* border: 1px solid rgba(0, 0, 0, 0.677); */
+  border-radius: 5px;
+  padding: 10px 15px;
+}
+
+.anticon svg{
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.active-icon{
+  color: black;
+}
+
+.inactive-icon{
+  color: gray;
+}
+
+
+/* Analytics page */
+.cards{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 2.5% 5%;
+  padding: 0 10%;
+}
+
+.AnalyticIcon svg{
+  font-size: 3rem;
+  cursor: pointer;
+}
+
+.analyticsCenter{
+  display: flex;
+  flex-direction: column;
+  /*justify-content: center;*/
+  align-items: center;
 }
